--- a/.air.agent.toml
+++ b/.air.agent.toml
@@ -13,9 +13,9 @@ tmp_dir = "tmp"
   exclude_unchanged = false
   follow_symlink = false
   full_bin = ""
-  include_dir = []
-  include_ext = ["go", "tpl", "tmpl", "html"]
-  include_file = []
+  include_dir = ["components", "resources", "agent", "cli", "cmd", "contrib", "pipeline", "server", "tools", "version", "woodpecker-go"]
+  include_ext = ["go", "tpl", "tmpl", "html", "json"]
+  include_file = [".env"]
   kill_delay = "0s"
   log = "build-errors.log"
   poll = false
